# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2145 2012/01/23 11:48:31 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta5 ????-??-??
 - 2012-01-23 Fixed bug#7916 - Address Book doesn't work correctly.
 - 2012-01-23 Fixed bug#8019 - Ticket customer info widget has unneeded scroll bars.
 - 2012-01-23 Fixed bug#8066 - TicketAcl with empy possible List for DynamicFields crashes.
 - 2012-01-20 Fixed bug#7495 - Cursor stands still in editor in IE 9.
 - 2012-01-20 Fixed bug#8129 - Ticket Unwatch may lead to errorscreen.
 - 2012-01-20 Updated Finnish translation file, thanks to Mikko Hynninen!
 - 2012-01-17 Fixed bug#8117 - Can't create ticket for newly created customer user.
 - 2012-01-16 Fixed bug#8094 - Typo In Ticket.pm.
 - 2012-01-16 Creation of QueueObject was not possible because of missing EncodeObject in CustomerUserGenericTicket.pm.

3.1.0.beta4 2012-01-17
 - 2012-01-12 Fixed bug#8107 - Ticket state is not set as default on ticket edit screens.
 - 2012-01-12 Fixed bug#8105 - Changing Priority does not update all relevant SysConfig fields.
 - 2012-01-11 Dramatically improved HTML rendering performance for pages with a large
    amount of data, thanks to Stefan Bedorf!
 - 2012-01-11 Fixed bug#8103 - Edit screens does not get Dynamic Field values from selected ticket.
 - 2012-01-11 Fixed bug#8070 - Configured year ranges do not apply for date DynamicFields.
 - 2012-01-11 Updated CPAN module YAML to version 0.78.
 - 2012-01-11 Updated CPAN module Net::IMAP::Simple to version 1.20271.
 - 2012-01-11 Updated CPAN module LWP::UserAgent to version 6.03.
 - 2012-01-11 Updated CPAN module Digest::SHA::PurePerl to version 5.70.
 - 2012-01-11 Updated CPAN module CGI to version 3.59.